2022-11-04T02:10:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3390720715 # 581
* notice: last 14d: unq all: 3 29
* notice: prev accum: outdated-unq outdated-all / unq all: 381 598 / 397 628
* notice: next accum: outdated-unq outdated-all / unq all: 382 600 / 397 629
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-20] / []

2022-11-03T16:34:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3387503602 # 580
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 381 598 / 397 629
* notice: next accum: outdated-unq outdated-all / unq all: 381 598 / 397 628
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-20]

2022-11-03T02:05:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3382498805 # 578
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 380 596 / 397 628
* notice: next accum: outdated-unq outdated-all / unq all: 381 598 / 397 629
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-19] / []

2022-11-02T16:37:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3379403260 # 577
* notice: last 14d: unq all: 3 32
* notice: prev accum: outdated-unq outdated-all / unq all: 380 596 / 397 627
* notice: next accum: outdated-unq outdated-all / unq all: 380 596 / 397 628
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-02]

2022-11-02T08:30:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3375962467 # 576