@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-04T02:10:57Z",
+  "timestamp" : "2022-11-04T08:32:40Z",
   "count_outdated" : 600,
   "uniques_outdated" : 382,
-  "count" : 629,
+  "count" : 628,
   "uniques" : 397,
   "clones" : [
     {
       "timestamp": "2022-10-21T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
