@@ -1,3 +1,11 @@
+2022-11-04T08:32:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3392315722 # 582
+* notice: last 14d: unq all: 3 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 382 600 / 397 629
+* notice: next accum: outdated-unq outdated-all / unq all: 382 600 / 397 628
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
+* notice: removed / changed dates: [] / [2022-10-21]
+
 2022-11-04T02:10:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3390720715 # 581
 * notice: last 14d: unq all: 3 29
